--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
+apply plugin: 'android-aspectjx'
 
 android {
     compileSdkVersion 30
@@ -14,12 +15,19 @@ android {
         versionCode 1
         versionName "1.0"
 
+        //resourcePrefix "moudle_prefix"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        release {
+            minifyEnabled true
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -32,6 +40,10 @@ android {
     }
 }
 
+aspectjx {
+    exclude 'androidx', 'kotlin', 'okhttp3', 'com.android', 'com.google', 'eventbus', 'com.oneplus'
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
@@ -39,4 +51,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    implementation 'org.aspectj:aspectjrt:1.8.9'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.github.siren4:BaseAdapter:1.0.0'
+    implementation 'com.github.siren4:RxBus:2.0.0'
+    implementation 'com.github.siren4:Click:2.0.0'
+    implementation 'com.oneplus.accountsdk:account:2.1.0-20210204.082035-4'
 }
