--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
-    repositories {
-        google()
-        jcenter()
+    repositories {//gradle脚本执行所需要的依赖
+        maven { url "http://m2repo.onepluscorp.cn:8081/nexus/content/repositories/jcenter" }
+        maven { url "http://m2repo.onepluscorp.cn:8081/nexus/content/repositories/maven_google_com" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,9 +16,13 @@ buildscript {
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
+    repositories {//项目本身所需要的依赖、比如各类第三方库
+        maven { url 'https://jitpack.io' }
+        maven { url "http://m2repo.onepluscorp.cn:8081/nexus/content/repositories/jcenter" }
+        maven { url "http://m2repo.onepluscorp.cn:8081/nexus/content/repositories/maven_google_com" }
+        maven { url "http://m2repo.onepluscorp.cn:8081/nexus/content/repositories/OPApk/" }
+        maven { url 'http://m2repo.onepluscorp.cn:8081/nexus/content/repositories/oneplus_share_libs_snapshots/' }
+        maven { url 'http://m2repo.onepluscorp.cn:8081/nexus/content/repositories/oneplus_share_libs/' }
     }
 }
 
