--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'com.github.siren4:BaseAdapter:1.0.0'
     implementation 'com.github.siren4:RxBus:2.0.0'
     implementation 'com.github.siren4:Click:2.0.0'
-    implementation 'com.oneplus.accountsdk:account:2.1.0-20210329.095752-1'
+    implementation 'com.oneplus.accountsdk:account:2.1.0'
 //    implementation 'com.oneplus.membersdk:member:2.0.0-20210329.064309-1'
     implementation 'com.oneplus.membersdk:member:2.0.0'
 }
